# mart-core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.js
src/: main.c  mart.c
src/common/: log.c  log.h  utils.h
src/common/log/: log.c  log.h
src/config/: common.h
src/modules/global/: set_timeout.c
src/runtime/: runtime.c  runtime.h
src/runtime/modules/bridge/: bridge.c  bridge.h
src/runtime/modules/brige/: brige.c  brige.h
src/runtime/modules/demo/: demo.c  demo.h
src/runtime/modules/global/: set_timeout.c  set_timeout.h
src/runtime/modules/indexed_db/: indexed_db.c  indexed_db.h
src/runtime/modules/mitt/: mitt.js
src/runtime/modules/process/: exit.c  exit.h  process.c  process.h
src/runtime/modules/std/: console.c  console.h  console_log.c  console_log.h  settimeout.c  settimeout.h  std.c  std.h  timer.c  timer.h
src/runtime/utils/: jsutils.c  jsutils.h  quickjs_utils.c  quickjs_utils.h  runtime_utils.c  runtime_utils.h
